--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,6 +17,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login --username densuke-st --password "${{ secrets.DOCKER_AUTH }}" 
+        docker login -u densuke-st -p "${SECRET}" 
         docker buildx create --use mybuilder
-        docker builxd build -t densukest/ubuntu-it-soft:v1 --push src
+        docker buildx build -t densukest/ubuntu-it-soft:v1 --push src
