--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: login to docker hub
-        uses: docker/login-action@v2
+      uses: docker/login-action@v2
         with:
-          username: densukest
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_AUTH }}
     - name: Build the Docker image
       run: |
