--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,5 +20,5 @@ jobs:
         password: ${{ secrets.DOCKER_AUTH }}
     - name: Build the Docker image
       run: |
-        docker buildx create --use mybuilder
+        docker buildx create --use --name mybuilder
         docker buildx build -t densukest/ubuntu-it-soft:v1 --push src
