--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,9 +8,16 @@ on:
 
 jobs:
 
-  build:
-
+  build_job:
     runs-on: ubuntu-latest
+    name: Build on ${{ matrix.arch }}
+  strategy:
+    matrix:
+      include:
+      - arch: amd64
+        distro: ubuntu-latest
+      - arch: aarch64
+        distro: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: login to docker hub
