--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main", "ci" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    - cron: "0 12 * * 0"
 
 jobs:
   build_job:
