[etc] キャッシュを使ったビルド方式に差し替え

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,20 +7,36 @@ ENV LANG ${LC_ALL}
 ARG DEBCONF_FRONTEND=noninteractive
 ARG DEBIAN_FRONTEND=${DEBCONF_FRONTEND}
 # タイムゾーン周辺
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y tzdata
 # ロケール設定
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+     apt-get update; \
     apt-get install -y locales; \
     locale-gen ja_JP.UTF-8
 # 足下回り
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y init openssh-server sudo
 # ssh使えるようにポートを通知
 EXPOSE 22
 
 # 章に無関係
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y git psmisc tree xz-utils bzip2 zip unzip; \
     apt-get upgrade --auto-remove --purge -y
 
@@ -29,29 +45,49 @@ RUN useradd -s /bin/bash ${USER}; usermod -a -G sudo ${USER}; \
     echo "${USER}:${PASSWORD}" | chpasswd; \
     cat /etc/passwd
 # Chap.4
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y less
 
 # Chap.6
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y mlocate man man-db
 
 # Chap.7
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y vim cowsay
 # 鬼教官モードのファイル設定
 COPY vimrc.local /etc/vim/
 RUN chmod 0644 /etc/vim/vimrc.local
 
 # Chap.12
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y diffutils
 
 # ホスト名
 #RUN echo sl > /etc/hostname
 
 # その他(あとで上に集約するかも)
-RUN apt-get update; \
+RUN --mount=type=cache,target=/var/lib/apt \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=tmpfs,target=/tmp \
+    --mount=type=tmpfs,target=/var/tmp \
+    apt-get update; \
     apt-get install -y bash-completion
 RUN echo 'session     required      pam_mkhomedir.so skel=/etc/skel umask=0022' >> /etc/pam.d/common-session
 # apt使用時のキャッシュデータクリア(Dockerビルド向け)を外す
