--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,5 +28,5 @@ jobs:
         password: ${{ secrets.DOCKER_AUTH }}
     - name: Build the Docker image
       run: |
-        docker buildx create --use --name mybuilder
-        docker buildx build -t densukest/ubuntu-it-soft:v1 --platform=linux/amd64,linux/arm64 --push src
+        docker build -t densukest/ubuntu-it-soft:v1 --build-arg PASSWORD=penguin src
+        docker push densukest/ubuntu-it-soft:v1
