--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,4 +29,14 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build -t densukest/ubuntu-it-soft:v1 --build-arg PASSWORD=penguin src
+    - name: Test connection
+      run: |
+        docker run -p 2022:22 --name test -d --privileged  densukest/ubuntu-it-soft:v1
+        bash ./test/conn
+    - name: Remove test container
+      run: |
+        docker stop test
+        docker rm test
+    - name: Push image
+      run: |
         docker push densukest/ubuntu-it-soft:v1
