--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Test connection
       run: |
         docker run -p 2022:22 --name test -d --privileged  densukest/ubuntu-it-soft:v1
-        install -m 0755 ./test/conn /tmp/conn
-        bash -xe /tmp/conn
+        apt-get update; apt-get install -y sshpass
+        sshpass -p penguin ssh -p 2022 -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
     - name: Remove test container
       run: |
         docker stop test
