--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: image-${{ matrix.os }}-${{ matrix.node }}
+        name: image-${{ matrix.arch }}
         path: dist/image.tar.gz
   Test:
     needs: Build
@@ -46,7 +46,7 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v2
       with:
-        name: image-${{ matrix.os }}-${{ matrix.node }}
+        name: image-${{ matrix.arch }}
     - name: Test connection
       run: |
         zcat dist/image.tar.gz | docker import densukest/ubuntu-it-soft:v1
