--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,7 +66,7 @@ jobs:
     - name: import image
       run: |
         find dist -ls
-        zcat dist/test.tar.gz | docker import densukest/ubuntu-it-soft:v1
+        zcat dist/test.tar.gz | docker image import densukest/ubuntu-it-soft:v1 -
     - name: Test connection
       run: |
         docker run -p 2022:22 --name test -d --privileged  densukest/ubuntu-it-soft:v1
