--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "ci" ]
+    branches: [ "ci", "main" ]
   pull_request:
     branches: [ "main" ]
   schedule:
@@ -22,11 +22,6 @@ jobs:
           distro: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: login to docker hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_AUTH }}
     - name: Build the Docker image
       run: |
         DOCKER_BUILDKIT=1 docker build -t densukest/ubuntu-it-soft:v1 --build-arg PASSWORD=penguin src
@@ -65,3 +60,25 @@ jobs:
         docker run -p 2022:22 --name test -d --privileged  densukest/ubuntu-it-soft:v1
         sudo apt-get update; sudo apt-get install -y sshpass
         sshpass -p penguin ssh -p 2022 -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
+  deploy:
+    needs: test
+    if: github.ref  == 'main' && github.event_name != 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: download image
+        uses: actions/download-artifact@v3
+        with:
+          name: image-${{ matrix.arch }}
+          path: dist
+      - name: import image
+        run: |
+          find dist -ls
+          docker image load --input dist/test.tar.gz
+      - name: login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_AUTH }}
+      - name: upload image
+        run: |
+          docker push densukest/ubuntu-it-soft:v1
