mainブランチであることをもうすこしはっきりわからせる

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,9 +21,6 @@ jobs:
         - arch: aarch64
           distro: ubuntu-latest
     steps:
-    - name: display current action type
-      run: |
-        echo branch: ${{ github.ref }} / event: ${{ github.event_name }}
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
@@ -65,7 +62,7 @@ jobs:
         sshpass -p penguin ssh -p 2022 -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
   deploy:
     needs: test
-    if: ${{ github.ref  == 'main' && github.event_name != 'pull_request' }}
+    if: ${{ endsWith(github.ref, "/main") && github.event_name != 'pull_request' }}
     strategy:
       matrix:
         include:
