--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,7 +62,7 @@ jobs:
         sshpass -p penguin ssh -p 2022 -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
   deploy:
     needs: test
-    if: ${{ endsWith(github.ref, "/main") && github.event_name != 'pull_request' }}
+    if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
     strategy:
       matrix:
         include:
