依存関係が抜けていたので訂正

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,7 @@ jobs:
         name: image-${{ matrix.arch }}
         path: dist/*
   test:
+    needs: build_job
     name: Test on ${{ matrix.arch }}
     runs-on: ${{ matrix.runner }}
     strategy:
