--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        [[ ${{ github.ref  }} =~ "/main$" ]] && CACHE="--no-cache"
+        grep -q '/main$' <<< "${{ github.ref }}" && CACHE="--no-cache"
         DOCKER_BUILDKIT=1 docker build -t densukest/ubuntu-it-soft:v1 "${CACHE}" --build-arg PASSWORD=penguin src
     - name: export image
       run: |
