--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,8 +20,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        grep -q '/main$' <<< "${{ github.ref }}" && CACHE="--no-cache"
-        DOCKER_BUILDKIT=1 docker build -t densukest/ubuntu-it-soft:v1 "${CACHE}" --build-arg PASSWORD=penguin src
+        BUILD_ARG="--build-arg PASSWORD=penguin"
+        grep -q '/main$' <<< "${{ github.ref }}" && BUILD_ARG="${BUILD_ARG} --no-cache"
+        DOCKER_BUILDKIT=1 docker build -t densukest/ubuntu-it-soft:v1 ${BUILD_ARG}  src
     - name: export image
       run: |
         mkdir dist
