--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Test connection
       run: |
         NAME="test-${RANDOM}"
-        CTX=testing.$$
-        docker run -P --name "${NAME}" -d --rm --privileged  densukest/ubuntu-it-soft:build
+        docker run -P --name "${NAME}" -d --rm --privileged  densukest/ubuntu-it-soft:v1
         SSHPORT=$(docker container ps -f "name=${NAME}" | egrep -o '0.0.0.0:[0-9]+->22/tcp' | sed -r -e 's;.*:([0-9]+)->.*;\1;')
         sudo apt-get update; sudo apt-get install -y sshpass
         sshpass -p penguin ssh -p ${SSHPORT} -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
