[feat] podmanを依存関係に追加
ファイルサイズ増える…

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -29,7 +29,7 @@ EXPOSE 22
 RUN --mount=type=cache,target=/var/lib/apt --mount=type=cache,target=/var/cache/apt \
     --mount=type=tmpfs,target=/tmp --mount=type=tmpfs,target=/var/tmp \
     apt-get update; \
-    apt-get install -y git psmisc tree xz-utils bzip2 zip unzip; \
+    apt-get install -y git psmisc tree xz-utils bzip2 zip unzip podman; \
     apt-get upgrade --auto-remove --purge -y
 
 # ユーザー作成(linux)
