[feat] Podmanが使えるかのチェック

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,12 @@ jobs:
         sudo apt-get update; sudo apt-get install -y sshpass
         sshpass -p penguin ssh -p ${SSHPORT} -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
         docker stop "${NAME}"
+    - name: Test podman
+      run: |
+        NAME="test-${RANDOM}"
+        docker run -P --name "${NAME}" -d --rm --privileged  densukest/ubuntu-it-soft:v1
+        docker exec "${NAME}" podman run --rm hello-world | grep -qi hello
+        docker stop "${NAME}"
     - name: login to docker hub
       if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
       uses: docker/login-action@v2
