--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
         BUILD_ARG="--build-arg PASSWORD=penguin"
         grep -q '/main$' <<< "${{ github.ref }}" && BUILD_ARG="${BUILD_ARG} --no-cache"
         docker buildx create --use --name builder
-        docker buildx build --platform=linux/amd64 --load -t densukest/ubuntu-it-soft:v1 ${BUILD_ARG}  src
+        docker buildx build --load -t densukest/ubuntu-it-soft:v1 ${BUILD_ARG}  src
     - name: Test connection
       run: |
         NAME="test-${RANDOM}"
