--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,6 +37,17 @@ jobs:
         sshpass -p penguin ssh -p ${SSHPORT} -o StrictHostKeyChecking=false linux@127.0.0.1 \
           bash -ec "test -f /etc/profile.d/locale-ja.sh; source /etc/profile.d/locale-ja.sh; date" | egrep '年'
         docker stop "${NAME}"
+    - name: Test skr
+      run: |
+          NAME="test-${RANDOM}"
+          docker run -P --name "${NAME}" -d --rm --privileged  ${TESTIMAGE}
+          SSHPORT=$(docker container ps -f "name=${NAME}" | egrep -o '0.0.0.0:[0-9]+->22/tcp' | sed -r -e 's;.*:([0-9]+)->.*;\1;')
+          sudo apt-get update; sudo apt-get install -y sshpass
+          sshpass -p penguin ssh -p ${SSHPORT} -o StrictHostKeyChecking=false linux@127.0.0.1 uname -a
+          # test for localed time
+          sshpass -p penguin ssh -p ${SSHPORT} -o StrictHostKeyChecking=false linux@127.0.0.1 \
+            bash -ec "which skr"
+          docker stop "${NAME}"
     - name: login to docker hub
       if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
       uses: docker/login-action@v2
