pandocのインストール

--- a/.github/workflows/Pages.yml
+++ b/.github/workflows/Pages.yml
@@ -33,6 +33,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: install pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - name: convert md to html
         run: |
           pandoc -s -o index.html index.md
