mdのソースはREADMEでした

--- a/.github/workflows/Pages.yml
+++ b/.github/workflows/Pages.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: convert md to html
         run: |
-          pandoc -s -o index.html index.md
+          pandoc -s -o index.html README.md
       - name: create assets
         run: |
           mkdir -p assets
