--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image CI(main)
 
 on:
   push:
@@ -12,7 +12,8 @@ on:
 jobs:
   build_job:
     name: Build
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     # env:
     #   TESTIMAGE: test-${{ github.run_id }}-${{ github.run_number }}
     steps:
