--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,6 +38,9 @@ jobs:
         sshpass -p penguin ssh -p ${SSHPORT} -o StrictHostKeyChecking=false linux@127.0.0.1 \
           bash -ec "test -f /etc/profile.d/locale-ja.sh; source /etc/profile.d/locale-ja.sh; date" | egrep '年'
         docker stop "${NAME}"
+    - name: Test /etc/crontab
+      run: |
+        docker run --rm --privileged  ${TESTIMAGE} ls /etc/crontab
     #- name: Test skr
     #  run: |
     #      docker run --rm ${TESTIMAGE} sh -c 'test -x /usr/local/bin/skr'
