builderをubuntu-latestに変更(戻す)

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   build_job:
     name: Build
-    #runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    #runs-on: self-hosted
     # env:
     #   TESTIMAGE: test-${{ github.run_id }}-${{ github.run_number }}
     steps:
