[CI] featuresブランチ以下ビルドテスト対象とする

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: Docker Image CI(main)
 
 on:
   push:
-    branches: [ "ci", "main" ]
+    branches: [ "ci", "main", "features/*" ]
   pull_request:
     branches: [ "main" ]
   schedule:
