--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,18 @@ on:
     - cron: "0 12 * * 0"
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build_job:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     #runs-on: self-hosted
     # env:
     #   TESTIMAGE: test-${{ github.run_id }}-${{ github.run_number }}
@@ -48,16 +56,35 @@ jobs:
     #- name: Test skr
     #  run: |
     #      docker run --rm ${TESTIMAGE} sh -c 'test -x /usr/local/bin/skr'
-    - name: login to docker hub
-      if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
-      uses: docker/login-action@v2
+    - name: Log in to the Container registry
+      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
+      uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_AUTH }}
-    - name: rebuild and push
-      if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
-      run: |
-        BUILD_ARG="--build-arg PASSWORD=penguin"
-        docker buildx build --platform=linux/amd64,linux/arm64 --push -t densukest/ubuntu-it-soft:v3 ${BUILD_ARG}  src
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
+      uses: docker/metadata-action@v4
+      with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # latestタグも追加
+          flavor: |
+            latest=${{ github.ref == 'refs/heads/main' }}
+    - name: Set up Docker Buildx
+      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
+      uses: docker/setup-buildx-action@v3
+    - name: Build and push Docker image
+      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
+      uses: docker/build-push-action@v4
+      with:
+        context: src
+        file: Dockerfile
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64
+        #platforms: linux/amd64,linux/arm64
     - name: cleanup image
       run: docker image rm ${TESTIMAGE}
