CI対象ブランチ名の修正

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: Docker Image CI(main)
 
 on:
   push:
-    branches: [ "ci", "main", "features/*" ]
+    branches: [ "ci", "main", "feature/*" ]
   pull_request:
     branches: [ "main" ]
   schedule:
