Dockerfileパスをデフォルトに

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -80,10 +80,12 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: src
-        file: Dockerfile
+        #file: Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        build-args: |
+          PASSWORD=penguin
         platforms: linux/amd64
         #platforms: linux/amd64,linux/arm64
     - name: cleanup image
