--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -80,13 +80,15 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: src
-        #file: Dockerfile
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: |
+          ${{ steps.meta.outputs.tags }}
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
           PASSWORD=penguin
         platforms: linux/amd64
         #platforms: linux/amd64,linux/arm64
+        provenance: false
     - name: cleanup image
       run: docker image rm ${TESTIMAGE}
